<resources>
    <string name="app_name">Github Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textTry">*Hanya Demo, Langsung klik Button Login</string>
    <string name="foto_user">Foto User</string>
</resources>