<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UI.Main.LoginPageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_username"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:textColorHint="?android:attr/colorPrimary"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="?android:attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/colorPrimary"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_password"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:textColorHint="?android:attr/colorPrimary"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?android:attr/colorPrimary"
        app:startIconDrawable="@drawable/ic_pass"
        app:startIconTint="?android:attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTry"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="12sp" />

</LinearLayout>